--- a/pages/book.html
+++ b/pages/book.html
@@ -16,7 +16,7 @@
      </nav>
 
     <!-- Content -->
-    <div class="d-flex flex-column justify-content-center align-items-center w-100 h-100" style="margin-top: 100px;">
+    <div class="d-flex flex-column justify-content-center align-items-center w-100 h-100 ml-0 px-5" style="margin-top: 100px;">
         <!-- Section 1 -->
         <div class="container d-flex w-100 flex-column mb-5">
             <!-- Book -->
