--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      </nav>
 
     <!-- Content -->
-    <div class="d-flex flex-column justify-content-center w-100 h-100" style="margin-top: 100px;">
+    <div class="d-flex flex-column justify-content-center w-100 h-100 px-5" style="margin-top: 100px;">
         <!-- Section 1 -->
         <div class="container d-flex w-100 flex-column mb-5">
             <h1 class="text-white mb-4">Mangás</h1>
