Feat: Empty Page

--- a/pages/book.html
+++ b/pages/book.html
@@ -37,7 +37,7 @@
                         <!-- Writer -->
                         <span>Makoto Yukimura</span> <br>
                         <!-- Lang -->
-                        <span>Idioma: PT-Br</span>
+                        <span>Idioma: PT-BR</span>
                     </p>
                     
                     <p class="text-secondary">
@@ -56,7 +56,7 @@
                     <div class="h-100"></div>
 
                     <!-- Button -->
-                    <a href="" class="text-decoration-none w-100 align-self-end">
+                    <a href="./read_book.html" target="_self" class="text-decoration-none w-100 align-self-end">
                         <button
                             type="button"
                             class="btn btn-primary bg-white border-white text-black fw-medium w-100"
@@ -74,7 +74,11 @@
             
             <!-- Items -->
             <div class="row gap-4">            
-                <a class="card d-flex text-decoration-none w-100 bg-dark border-2 border-secondary rounded px-0" style="min-width: 250px; max-width: 300px; max-height: max-content;">
+                <a 
+                    href="./book.html"
+                    target="_self"
+                    class="card d-flex text-decoration-none w-100 bg-dark border-2 border-secondary rounded px-0 cursor-pointer" 
+                    style="min-width: 250px; max-width: 300px; max-height: max-content;">
                     <img class="card-img-top bg-black" src="https://images.justwatch.com/poster/140303029/s718/vuinrandosaga.jpg" alt="Book Cover" />
                     <div class="card-body">
                         <h4 class="card-title text-white">Vinland Saga</h4>
