--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
             
             <!-- Items -->
             <div class="row gap-4">            
-                <a class="card d-flex text-decoration-none w-100 bg-dark border-2 border-secondary rounded px-0" style="min-width: 250px; max-width: 300px; max-height: max-content;">
+                <a 
+                    href="./pages/book.html"
+                    target="_self"
+                    class="card d-flex text-decoration-none w-100 bg-dark border-2 border-secondary rounded px-0 cursor-pointer" 
+                    style="min-width: 250px; max-width: 300px; max-height: max-content;">
                     <img class="card-img-top bg-black" src="https://images.justwatch.com/poster/140303029/s718/vuinrandosaga.jpg" alt="Book Cover" />
                     <div class="card-body">
                         <h4 class="card-title text-white">Vinland Saga</h4>
