--- a/pages/book.html
+++ b/pages/book.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +9,18 @@
 </head>
 <body class="bg-dark overflow-x-hidden" style="width: 100vw;">
     <!-- Header -->
-     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-         <div class="d-flex flex-row bg-black p-3 px-5 fixed-top navbar" style="width: 100vw;">
-             <img src="../assets/icons/Logomarca.svg" alt="Book Mark" style="width: 80px;">
-         </div>
-     </nav>
+    <header class="d-flex flex-row bg-black p-3 px-5 fixed-top navbar align-items-center justify-content-between" style="width: 100vw;">
+        <img src="../assets/icons/Logomarca.svg" alt="Book Mark" style="width: 80px;">
+       <!-- Hover added -->
+       </div>
+
+        <nav class="navbar">
+           <ul class="d-flex flex-row gap-2" style="list-style: none;">
+               <li><a href="../index.html" class="text-white text-decoration-none">Início</a></li>
+               <li><a href="./consult_book_data.html" class="text-white text-decoration-none">Consultar</a></li>
+           </ul>
+        </nav>
+    </header>
 
     <!-- Content -->
     <div class="d-flex flex-column justify-content-center align-items-center w-100 h-100 ml-0 px-5" style="margin-top: 100px;">
@@ -74,6 +81,92 @@
             
             <!-- Items -->
             <div class="row gap-4">            
+                <a 
+                    href="./book.html"
+                    target="_self"
+                    class="card d-flex text-decoration-none w-100 bg-dark border-2 border-secondary rounded px-0 cursor-pointer" 
+                    style="min-width: 250px; max-width: 300px; max-height: max-content;">
+                    <img class="card-img-top bg-black" src="https://images.justwatch.com/poster/140303029/s718/vuinrandosaga.jpg" alt="Book Cover" />
+                    <div class="card-body">
+                        <h4 class="card-title text-white">Vinland Saga</h4>
+                        <p class="card-text text-secondary">Makoto Yukimura</p>
+                        <p class="card-text text-secondary">Idioma: PT-BR</p>
+                    </div>
+                </a>
+
+                <!-- Duplicate items -->
+                <a 
+                    href="./book.html"
+                    target="_self"
+                    class="card d-flex text-decoration-none w-100 bg-dark border-2 border-secondary rounded px-0 cursor-pointer" 
+                    style="min-width: 250px; max-width: 300px; max-height: max-content;">
+                    <img class="card-img-top bg-black" src="https://images.justwatch.com/poster/140303029/s718/vuinrandosaga.jpg" alt="Book Cover" />
+                    <div class="card-body">
+                        <h4 class="card-title text-white">Vinland Saga</h4>
+                        <p class="card-text text-secondary">Makoto Yukimura</p>
+                        <p class="card-text text-secondary">Idioma: PT-BR</p>
+                    </div>
+                </a>
+                <a 
+                    href="./book.html"
+                    target="_self"
+                    class="card d-flex text-decoration-none w-100 bg-dark border-2 border-secondary rounded px-0 cursor-pointer" 
+                    style="min-width: 250px; max-width: 300px; max-height: max-content;">
+                    <img class="card-img-top bg-black" src="https://images.justwatch.com/poster/140303029/s718/vuinrandosaga.jpg" alt="Book Cover" />
+                    <div class="card-body">
+                        <h4 class="card-title text-white">Vinland Saga</h4>
+                        <p class="card-text text-secondary">Makoto Yukimura</p>
+                        <p class="card-text text-secondary">Idioma: PT-BR</p>
+                    </div>
+                </a>
+                <a 
+                    href="./book.html"
+                    target="_self"
+                    class="card d-flex text-decoration-none w-100 bg-dark border-2 border-secondary rounded px-0 cursor-pointer" 
+                    style="min-width: 250px; max-width: 300px; max-height: max-content;">
+                    <img class="card-img-top bg-black" src="https://images.justwatch.com/poster/140303029/s718/vuinrandosaga.jpg" alt="Book Cover" />
+                    <div class="card-body">
+                        <h4 class="card-title text-white">Vinland Saga</h4>
+                        <p class="card-text text-secondary">Makoto Yukimura</p>
+                        <p class="card-text text-secondary">Idioma: PT-BR</p>
+                    </div>
+                </a>
+                <a 
+                    href="./book.html"
+                    target="_self"
+                    class="card d-flex text-decoration-none w-100 bg-dark border-2 border-secondary rounded px-0 cursor-pointer" 
+                    style="min-width: 250px; max-width: 300px; max-height: max-content;">
+                    <img class="card-img-top bg-black" src="https://images.justwatch.com/poster/140303029/s718/vuinrandosaga.jpg" alt="Book Cover" />
+                    <div class="card-body">
+                        <h4 class="card-title text-white">Vinland Saga</h4>
+                        <p class="card-text text-secondary">Makoto Yukimura</p>
+                        <p class="card-text text-secondary">Idioma: PT-BR</p>
+                    </div>
+                </a>
+                <a 
+                    href="./book.html"
+                    target="_self"
+                    class="card d-flex text-decoration-none w-100 bg-dark border-2 border-secondary rounded px-0 cursor-pointer" 
+                    style="min-width: 250px; max-width: 300px; max-height: max-content;">
+                    <img class="card-img-top bg-black" src="https://images.justwatch.com/poster/140303029/s718/vuinrandosaga.jpg" alt="Book Cover" />
+                    <div class="card-body">
+                        <h4 class="card-title text-white">Vinland Saga</h4>
+                        <p class="card-text text-secondary">Makoto Yukimura</p>
+                        <p class="card-text text-secondary">Idioma: PT-BR</p>
+                    </div>
+                </a>
+                <a 
+                    href="./book.html"
+                    target="_self"
+                    class="card d-flex text-decoration-none w-100 bg-dark border-2 border-secondary rounded px-0 cursor-pointer" 
+                    style="min-width: 250px; max-width: 300px; max-height: max-content;">
+                    <img class="card-img-top bg-black" src="https://images.justwatch.com/poster/140303029/s718/vuinrandosaga.jpg" alt="Book Cover" />
+                    <div class="card-body">
+                        <h4 class="card-title text-white">Vinland Saga</h4>
+                        <p class="card-text text-secondary">Makoto Yukimura</p>
+                        <p class="card-text text-secondary">Idioma: PT-BR</p>
+                    </div>
+                </a>
                 <a 
                     href="./book.html"
                     target="_self"
