Fix: Contact page

--- a/pages/book.html
+++ b/pages/book.html
@@ -14,12 +14,12 @@
        <!-- Hover added -->
        </div>
 
-        <nav class="navbar">
-           <ul class="d-flex flex-row gap-2" style="list-style: none;">
-               <li><a href="../index.html" class="text-white text-decoration-none">Início</a></li>
-               <li><a href="./consult_book_data.html" class="text-white text-decoration-none">Consultar</a></li>
-           </ul>
-        </nav>
+       <nav class="navbar">
+        <ul class="d-flex flex-row gap-2" style="list-style: none;">
+            <li><a href="../index.html" class="text-white text-decoration-none">Início</a></li>
+            <li><a href="./contact.html" class="text-white text-decoration-none">Contato</a></li>
+        </ul>
+     </nav>
     </header>
 
     <!-- Content -->
