--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <!-- Hover added -->
         </div>
 
-         <nav class="navbar">
+        <nav class="navbar">
             <ul class="d-flex flex-row gap-2" style="list-style: none;">
                 <li><a href="./index.html" class="text-white text-decoration-none fw-medium">Início</a></li>
-                <li><a href="./pages/consult_book_data.html" class="text-white text-decoration-none">Consultar</a></li>
+                <li><a href="./pages/contact.html" class="text-white text-decoration-none">Contato</a></li>
             </ul>
          </nav>
      </header>
